# wordbites

./: README.md  index.html
API/: AWS.py  main.py  requirements.txt
solver/: Cargo.toml
solver/src/: data.rs  lib.rs  trie.rs
