cargo-features = ["edition2021"]

[package]
name = "wordbites"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
serde_json = "1.0.64"

[profile.release]
debug = true